# Arion

./: .gitattributes  .gitignore  .gitmodules  <  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  arch__arm64_8hpp.html  arch__arm64_8hpp.js  arch__arm64_8hpp_source.html  arch__arm_8hpp.html  arch__arm_8hpp.js  arch__arm_8hpp_source.html  arch__manager_8hpp.html  arch__manager_8hpp.js  arch__manager_8hpp_source.html  arch__x86-64_8hpp.html  arch__x86-64_8hpp.js  arch__x86-64_8hpp_source.html  arch__x86_8hpp.html  arch__x86_8hpp.js  arch__x86_8hpp_source.html  arion_8hpp.html  arion_8hpp.js  arion_8hpp_source.html  arion__afl_8hpp.html  arion__afl_8hpp.js  arion__afl_8hpp_source.html  baremetal__manager_8hpp.html  baremetal__manager_8hpp.js  baremetal__manager_8hpp_source.html  classarion_1_1ArchManager-members.html  classarion_1_1ArchManager.html  classarion_1_1ArchManager.js  classarion_1_1Arion-members.html  classarion_1_1Arion.html  classarion_1_1Arion.js  (+979 more)
.github/workflows/: deploy.yml  documentation.yml  tests.yml
cmake/: arionConfig.cmake.in
docker/: Dockerfile.debian11  Dockerfile.debian12  Dockerfile.fedora40  Dockerfile.fedora41  Dockerfile.fedora42  Dockerfile.ubuntu22  Dockerfile.ubuntu24
examples/Baremetal/: CMakeLists.txt  baremetal.cpp  shellcode.asm
examples/Baremetal/CustomMem/: baremetal.cpp
examples/Baremetal/DefaultMem/: baremetal.cpp
examples/Baremetal/basic_shellcode_custom_mappings/: CMakeLists.txt  baremetal.cpp
examples/Baremetal/basic_shellcode_default_mappings/: baremetal.cpp
examples/Coverage/: CMakeLists.txt  coverage.cpp  target.cpp
examples/CpuidHandler/: CMakeLists.txt  cpuid_handler.cpp
examples/Disassembler/: CMakeLists.txt  disassembler.cpp
examples/ForkHandler/: CMakeLists.txt  fork_handler.cpp  target.c
examples/Fuzzer/: CMakeLists.txt  fuzzer.cpp  target.cpp
examples/Gdbserver/: CMakeLists.txt  gdbserver.cpp
examples/GenericBinaryTester/: CMakeLists.txt  gpt.cpp
examples/GenericBinaryTester/binaries/sleep/: CmakeLists.txt  sleep.c
examples/GenericBinaryTester/binaries/x86/: sleep
examples/SpeedTester/: CMakeLists.txt  speed_tester.cpp
include/arion/: arion.hpp
include/arion/archs/: abi_arm.hpp  abi_arm64.hpp  abi_x86-64.hpp  abi_x86.hpp  arch_arm.hpp  arch_arm64.hpp  arch_ppc32.hpp  arch_x86-64.hpp  arch_x86.hpp
include/arion/archs/x86/: gdt_manager.hpp
include/arion/common/: abi_manager.hpp  arch_manager.hpp  baremetal.hpp  baremetal_manager.hpp  code_tracer.hpp  config.hpp  context_manager.hpp  executable_parser.hpp  file_system_manager.hpp  global_defs.hpp  global_excepts.hpp  hooks_manager.hpp  logger.hpp  memory_manager.hpp  signal_manager.hpp  socket_manager.hpp  threading_manager.hpp
include/arion/components/: arion_afl.hpp  code_trace_analysis.hpp
include/arion/crypto/: md5.hpp
include/arion/utils/: convert_utils.hpp  fs_utils.hpp  host_utils.hpp  math_utils.hpp  struct_utils.hpp  type_utils.hpp
rootfs/br_configs/: arion_aarch64_defconfig
scripts/: docker_build.sh  rootfs_build.sh  rootfs_download.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+121 more)
src/: arion.cpp
src/archs/: abi_arm.cpp  abi_arm64.cpp  abi_x86-64.cpp  abi_x86.cpp  arch_arm.cpp  arch_arm64.cpp  arch_ppc32.cpp  arch_x86-64.cpp  arch_x86.cpp
src/archs/x86/: gdt_manager.cpp
src/common/: abi_manager.cpp  arch_manager.cpp  baremetal_manager.cpp  code_tracer.cpp  context_manager.cpp  executable_parser.cpp  file_system_manager.cpp  hooks_manager.cpp  logger.cpp  memory_manager.cpp  signal_manager.cpp  socket_manager.cpp  threading_manager.cpp
src/components/: arion_afl.cpp  code_trace_analysis.cpp
src/utils/: fs_utils.cpp  math_utils.cpp  type_utils.cpp
tests/CtxtRestore/: CMakeLists.txt  test.cpp
tests/Forking/: res.txt  target.cpp  test.cpp
tests/Hooks/: res.txt  target.cpp  test.cpp
tests/MemOps/: res.txt  target.cpp  test.cpp
tests/ReadWrite/: read_write.cpp
tests/Threading/: res.txt  target.cpp  test.cpp
tests/include/arion_test/: common.hpp  shellcode.hpp
tests/include/arion_test/shellcode/: basic_shellcode.hpp
tests/src/: inst_tests.cpp  main.cpp
tests/src/Basic/: syscall_logging.cpp
tests/src/Context/: context_restore.cpp
tests/src/Hooks/: block_hook.cpp
tests/src/Memory/: read_write.cpp
tests/src/Threading/: simple_threads.cpp
tests/src/arch/x86-64/hooks/: block_hook.cpp  code_hook.cpp  insn_hook.cpp  intr_hook.cpp
tests/src/baremetal/: baremetal_custom_mappings_hello_world.cpp  baremetal_custom_mem.cpp  baremetal_default_mappings_hello_world.cpp  baremetal_default_mem.cpp
tests/src/baremetal/src/: bin2vec.py  hello_world_arm.s  hello_world_arm64.s  hello_world_x86.s  hello_world_x86_64.s
tests/src/basic/: multiple_emulations.cpp  simple_emulation.cpp  syscall_logging.cpp
tests/src/context/: context_restore.cpp
tests/src/forking/: simple_forks.cpp
tests/src/hooks/: block_hook.cpp  code_hook.cpp  insn_hook.cpp  intr_hook.cpp
tests/src/memory/: find_replace.cpp
tests/src/threading/: simple_threads.cpp
tests/targets/multi_fork/: CMakeLists.txt  multi_fork.cpp
tests/targets/multi_fork_thread/: CMakeLists.txt  multi_fork_thread.cpp
tests/targets/multi_thread/: CMakeLists.txt  multi_thread.cpp
tests/targets/simple_print/: CMakeLists.txt  simple_print.cpp
tests/targets/simple_syscalls/: CMakeLists.txt  simple_syscalls.cpp
tools/: CMakeLists.txt
tools/cmake/: IntelPin.cmake
tools/pin_cpuid_bypass/: CMakeLists.txt
tools/pin_cpuid_bypass/src/: pin_cpuid_bypass.cpp
tools/pin_tracer/: CMakeLists.txt
tools/pin_tracer/src/: pin_tracer.cpp
wiki/: home.md
